BE/OAuthStart/k8s/05-services-hoster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services-hoster
  namespace: auction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: services-hoster
  template:
    metadata:
      labels:
        app: services-hoster
    spec:
      containers:
        - name: services-hoster
          image: services-hoster:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: services-hoster
  namespace: auction
spec:
  selector:
    app: services-hoster
  ports:
    - port: 8080
      targetPort: 8080
