BE/OAuthStart/k8s/06-oauth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-service
  namespace: auction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-service
  template:
    metadata:
      labels:
        app: oauth-service
    spec:
      containers:
        - name: oauth-service
          image: oauth-service:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: oauth-service
  namespace: auction
spec:
  selector:
    app: oauth-service
  ports:
    - port: 8080
      targetPort: 8080
