BE/OAuthStart/k8s/07-payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: auction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: payments:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: auction
spec:
  selector:
    app: payments
  ports:
    - port: 8080
      targetPort: 8080
